--- a/src/app/main/portfolio/portfolio.component.html
+++ b/src/app/main/portfolio/portfolio.component.html
@@ -1,17 +1,25 @@
 <div>
-    <div class='title-wrap'>
-        <h2>My Portfolio</h2>
-        <div>Refresh Rate (seconds) </div>
+  <div class='title-wrap'>
+    <h3>My Portfolio</h3>
+    <div class="refresh-rate">
+      <div>Refresh Rate (seconds)</div>
+      <app-up-down-number [refreshRateValue]="refreshRate$ | async"
+                          (change)="onRefreshRateChange($event)"></app-up-down-number>
     </div>
-    <mat-card class="card" *ngFor="let stock of (stocks$ | async)">
+  </div>
+  <mat-card class="card" *ngFor="let stock of (stocks$ | async) | sortBy:'3. volume'">
+    <mat-card-title>
+      Stock: {{stock['1. symbol']}}
+    </mat-card-title>
+    <mat-card-content>
       <div class="top">
-        <div>Stock: {{stock['1. symbol']}}</div>
-        <div>Price: ${{stock['2. price']}}</div>
-        <div>Volume: ${{stock['3. volume']}}</div>
+        <div>Price: {{stock['2. price'] ? '$' + stock['2. price'] : ''}}</div>
+        <div>Volume: {{stock['3. volume'] && stock['3. volume'] !== '--' ? '$' + stock['3. volume'] : 'N/A'}}</div>
       </div>
       <div class="bottom">
-        <div>Updated </div>
-        <button (click)="removeStock(stock)">Remove</button>
+        <div>Updated</div>
+        <button (click)="removeStock(stock['1. symbol'])">Remove</button>
       </div>
-    </mat-card>
+    </mat-card-content>
+  </mat-card>
 </div>
