--- a/src/app/main/portfolio/portfolio.component.scss
+++ b/src/app/main/portfolio/portfolio.component.scss
@@ -7,13 +7,43 @@
     .title {
       font-weight: bold;
     }
+
+    .refresh-rate {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 12px;
+      width: 56%;
+    }
   }
 
-  .card {
-    .top {
-      border: 1px solid silver;
+  .mat-card {
+    border: 1px solid rgba(8,24,78,0.51);;
+    padding: 0;
+    margin: 5px 0;
+
+    .mat-card-title {
+      background-color: rgba(8,24,78,0.51);
+      color: white;
+      padding: 5px;
+    }
+
+    .mat-card-content {
       display: flex;
+      flex-direction: column;
+      padding: 5px;
+      height: 50px;
       justify-content: space-between;
+
+      .top {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .bottom {
+        display: flex;
+        justify-content: space-between;
+      }
     }
   }
 }
