--- a/src/app/main/stock-selector/stock-selector.component.scss
+++ b/src/app/main/stock-selector/stock-selector.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: inherit;
+  margin-bottom: 5px;
 
   button {
     margin-top: 5px;
