--- a/src/app/shared/components/up-down-number/up-down-number.component.html
+++ b/src/app/shared/components/up-down-number/up-down-number.component.html
@@ -1,1 +1,1 @@
-<input #refreshRate type="number" min="0" class="refresh-rate" value={{refreshRateValue}} (change)="refreashRateChanged(refreshRate.value)">
+<input #refreshRate type="number" min="0" class="refresh-rate" [value]="refreshRateValue" (change)="refreshRateChanged(refreshRate.value)">
