--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,14 +1,28 @@
 :host {
   display: flex;
   justify-content: center;
+}
+
+@media screen and (max-width: 500px) {
+  :host {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  :host {
+    flex-direction: column-reverse;
+    align-items: center;
+    font-size: 10px;
+  }
 
   app-portfolio {
-    margin-right: 30px;
-    width: 20%;
+    margin: 0 !important;
+    width: auto !important;
   }
 
   app-stock-selector {
-    margin-left: 30px;
-    width: 20%;
+    margin: 0 !important;
+    width: auto !important;
   }
 }
