--- a/src/app/main/portfolio/portfolio.component.scss
+++ b/src/app/main/portfolio/portfolio.component.scss
@@ -1,4 +1,8 @@
 :host {
+  max-width: 400px;
+  margin-right: 30px;
+  width: 50%;
+
   .title-wrap {
     display: flex;
     justify-content: space-between;
@@ -8,22 +12,32 @@
       font-weight: bold;
     }
 
-    .refresh-rate {
+    .refresh-rate-wrapper {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: flex-end;
       font-size: 12px;
-      width: 56%;
+
+      .refresh-rate-title {
+        margin-right: 5px;
+      }
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+    .title-wrap {
+      flex-direction: column;
+      align-items: center;
     }
   }
 
   .mat-card {
-    border: 1px solid rgba(8,24,78,0.51);;
+    border: 1px solid rgba(8, 24, 78, 0.51);;
     padding: 0;
     margin: 5px 0;
 
     .mat-card-title {
-      background-color: rgba(8,24,78,0.51);
+      background-color: rgba(8, 24, 78, 0.51);
       color: white;
       padding: 5px;
     }
@@ -43,6 +57,21 @@
       .bottom {
         display: flex;
         justify-content: space-between;
+      }
+    }
+
+    @media screen and (max-width: 500px) {
+      .mat-card-content {
+        height: auto;
+
+        .top {
+          flex-direction: column;
+          margin-bottom: 10px;
+        }
+
+        .bottom {
+          flex-direction: column;
+        }
       }
     }
   }
