--- a/src/app/main/stock-selector/stock-selector.component.html
+++ b/src/app/main/stock-selector/stock-selector.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3>Stock Selector</h3>
-  <updated-list [options]='stockList' (selected)="selectedStock = $event"></updated-list>
-  <button (click)="addStock()">Add Selected Stock</button>
+  <updated-list [options]="stockNames | filter:'selected':false" (selected)="selectedStockName = $event"></updated-list>
+  <button class="add-stock" (click)="addStock()">Add</button>
 </div>
 <div>{{message}}</div>
