--- a/src/app/main/stock-selector/stock-selector.component.scss
+++ b/src/app/main/stock-selector/stock-selector.component.scss
@@ -4,8 +4,12 @@
   justify-content: space-between;
   height: inherit;
   margin-bottom: 5px;
+  margin-left: 30px;
+  width: 20%;
 
   button {
     margin-top: 5px;
+    width: 100%;
+    max-width: 150px;
   }
 }
