--- a/src/app/main/portfolio/portfolio.component.scss
+++ b/src/app/main/portfolio/portfolio.component.scss
@@ -16,7 +16,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      font-size: 12px;
+      font-size: 10px;
 
       .refresh-rate-title {
         margin-right: 5px;
@@ -25,6 +25,13 @@
   }
 
   @media screen and (max-width: 700px) {
+    .title-wrap {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  @media screen and (max-width: 400px) {
     .title-wrap {
       flex-direction: column;
       align-items: center;
